@@ -142,4 +142,32 @@ if (isset($_SESSION['refresh'])) {
 	var sessionMessage=<?php print display_output_messages(false);?>;
 	var sessionMessageOk='<?php print __('Ok');?>';
 	var sessionMessagePause='<?php print __('Pause');?>';
+	var zoom_i18n_zoom_in='<?php print __('Zoom In');?>';
+	var zoom_i18n_zoom_out='<?php print __('Zoom Out');?>';
+	var zoom_i18n_zoom_out_factor='<?php print __('Zoom Out Factor');?>';
+	var zoom_i18n_timestamps='<?php print __('Timestamps');?>';
+	var zoom_i18n_zoom_2='<?php print __('2x');?>';
+	var zoom_i18n_zoom_4='<?php print __('4x');?>';
+	var zoom_i18n_zoom_8='<?php print __('8x');?>';
+	var zoom_i18n_zoom_16='<?php print __('16x');?>';
+	var zoom_i18n_zoom_32='<?php print __('32x');?>';
+	var zoom_i18n_zoom_out_positioning='<?php print __('Zoom Out Positioning');?>';
+	var zoom_i18n_mode='<?php print __('Zoom Mode');?>';
+	var zoom_i18n_graph='<?php print __('Graph');?>';
+	var zoom_i18n_quick='<?php print __('Quick');?>';
+	var zoom_i18n_advanced='<?php print __('Advanced');?>';
+	var zoom_i18n_newTab='<?php print __('Open in new tab');?>';
+	var zoom_i18n_save_graph='<?php print __('Save graph');?>';
+	var zoom_i18n_copy_graph='<?php print __('Copy graph');?>';
+	var zoom_i18n_copy_graph_link='<?php print __('Copy graph link');?>';
+	var zoom_i18n_on='<?php print __('Always On');?>';
+	var zoom_i18n_auto='<?php print __('Auto');?>';
+	var zoom_i18n_off='<?php print __('Always Off');?>';
+	var zoom_i18n_begin='<?php print __('Begin with');?>';
+	var zoom_i18n_center='<?php print __('Center');?>';
+	var zoom_i18n_end='<?php print __('End with');?>';
+	var zoom_i18n_disabled='<?php print __('Disabled');?>';
+	var zoom_i18n_close='<?php print __('Close');?>';
+	var zoom_i18n_settings='<?php print __('Settings');?>';
+	var zoom_i18n_3rd_button='<?php print __('3rd Mouse Button');?>';
 </script>
